[package]
name = "ghrs"
version = "0.1.0"
authors = ["Takayuki Nakata <f.seasons017@gmail.com>"]
edition = "2018"

[[example]]
name = "no_activity"

[dependencies]
ureq = { version = "2.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
