[package]
name = "ghrs"
version = "0.1.1"
authors = ["Takayuki Nakata <f.seasons017@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple client for GitHub v3 API"
repository = "https://github.com/giraffate/ghrs"
readme = "README.md"
keywords = ["github", "client"]
documentation = "https://docs.rs/ghrs"

[[example]]
name = "pr_triage"

[[example]]
name = "make_report"

[dependencies]
ureq = { version = "2.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hyperx = "1.0.0"
